gradNT Small content edit

--- a/gradNT.html
+++ b/gradNT.html
@@ -25,7 +25,7 @@
 <div id="content">
 <hr>
 	<p>
-		<h2>This page is an archive of talks which were given in the 2020-2021 school year at Penn State.</h2>
+		<h2>This page is an archive of talks which were given by grad students in the 2020-2021 school year at Penn State.</h2>
 	</p>
 
 	<hr>
