--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
 				<b>MathSciNet Author Page</b></a>
 		</li>
 		<li> 
+			<a href="https://genealogy.math.ndsu.nodak.edu/id.php?id=279803"> 
+				<b>Math Genealogy</b></a>
+		</li>
+		<li> 
 			<a href="https://orcid.org/0000-0003-1514-4755"> 
 				<b>ORCID</b></a>
 		</li>
