--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@
 		</li>
 		<br>
 		<li> 
-			<a href="https://arxiv.org/abs/2002.02067"> 
+			<!--<a href="https://arxiv.org/abs/2002.02067"> 
 				<b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
-				To appear in the <a href="https://www.springer.com/series/15045">Simons Symposia</a>  volume for the <a href="https://simonscollab.icerm.brown.edu/"> Simons Collaboration on "Arithmetic Geometry, Number Theory, and Computation"</a>.
+				The <a href="https://www.springer.com/series/15045">Simons Symposia</a>  volume for the <a href="https://simonscollab.icerm.brown.edu/"> Simons Collaboration on "Arithmetic Geometry, Number Theory, and Computation"</a>.
+			-->
+
+				 <a href="https://www.springer.com/series/15045"><b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
+				Arithmetic Geometry, Number Theory, and Computation, Simons Symposia. <a href="https://arxiv.org/abs/2002.02067"> (arxiv version) </a>
 		</li>
 		<br>
 		<li> 
