--- a/index.html
+++ b/index.html
@@ -134,17 +134,32 @@
 -->
 <div id="page">
 <div id="content">
-	<h2> Teaching  </h2><br>
-	<i>The Pennsylvania State University: </i>
+	<h2> Teaching  Experience </h2><br>
+	<i>University College London: </i>
 	<ul>
-		<li> Summer 2021: Instructor for <a href="https://math.psu.edu/undergraduate/courses/math220"> Math 220, Matrices </a> </li>
+		<li> <a href="https://www.ucl.ac.uk/maths/current-students/current-undergraduates/module-information-undergraduates"> MATH0006 Algebra 2</a>, <i> Mathematics Honours Year 1 </i> - Winter 2022 </li>
+	</ul>
+
+	<i>The Pennsylvania State University: </i>
+	<!-- OLD STYLE<ul>
+		<li> Summer 2021: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 220, Matrices </a> </li>
 		<li> Spring 2021: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>
 		<li> Fall 2020: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>
-		<li> Fall 2017: Teaching assistant for the <a href="https://math.psu.edu/mass/content/mass-2017"> MASS course on knot theory </a> </li>
-		<li> Fall 2016: Instructor for <a href="https://math.psu.edu/undergraduate/courses/math026"> Math 026, Plane Trigonometry </a> </li>
-		<li> Summer 2016: Instructor for <a href="https://math.psu.edu/undergraduate/courses/math026"> Math 026, Plane Trigonometry </a> </li>
-		<li> Spring 2016: Instructor for <a href="https://math.psu.edu/undergraduate/courses/math021">  Math 021, College Algebra I </a> </li>
-		<li> Fall 2015: Teaching assistant for <a href="https://math.psu.edu/undergraduate/courses/math034"> Math 034, Math and Money </a> </li>
+		<li> Fall 2017: <a href="https://science.psu.edu/math/mass/content/mass-2017.html"> MASS course on knot theory </a> </li>
+		<li> Fall 2016: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> </li>
+		<li> Summer 2016: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> </li>
+		<li> Spring 2016: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/">  Math 021, College Algebra I </a> </li>
+		<li> Fall 2015: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 034, Math and Money </a> </li>
+	</ul>-->
+	<ul>
+		<li><a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 220, Matrices </a> -  Summer 2021 </li>
+		<!--<li> Spring 2021: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>
+		<li> Fall 2020: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>-->
+		<li> <a href="https://science.psu.edu/math/mass/content/mass-2017.html"> Math 497C, Honors MASS Geometry: Knot Theory </a> - Fall 2017 </li>
+		<li> <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> - Fall 2016 </li>
+		<li> <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> - Summer 2016 </li>
+		<li>  <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/">  Math 021, College Algebra I </a> - Spring 2016 </li>
+		<li> <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 034, Math and Money </a> - Fall 2015 </li>
 	</ul>
 	<hr>
 </div>
