Springer symposia URL update

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				The <a href="https://www.springer.com/series/15045">Simons Symposia</a>  volume for the <a href="https://simonscollab.icerm.brown.edu/"> Simons Collaboration on "Arithmetic Geometry, Number Theory, and Computation"</a>.
 			-->
 
-				 <a href="https://www.springer.com/series/15045"><b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
+				 <a href="https://link.springer.com/chapter/10.1007/978-3-030-80914-0_7"><b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
 				Arithmetic Geometry, Number Theory, and Computation, Simons Symposia. <a href="https://arxiv.org/abs/2002.02067"> (arxiv version) </a>
 		</li>
 		<br>
