--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 	<h2> Papers </h2>		
 	<ol reversed>
 		<li> 
+			<a href="https://arxiv.org/abs/2207.00140"> 
+				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a> (arXiv preprint.)
+		</li>
+		<br>
+		<li> 
 			<a href="https://arxiv.org/abs/2105.08125"> 
 				<b>Every finite abelian group is the group of rational points of an ordinary abelian variety over &#x1D53D<sub>2</sub>, &#x1D53D<sub>3</sub>,  and &#x1D53D<sub>5</sub></b>,</a>  with Stefano Marseglia. (arXiv preprint.)
 		</li>
