--- a/index.html
+++ b/index.html
@@ -70,13 +70,19 @@
 	<h2> Papers </h2>		
 	<ol reversed>
 		<li> 
+			<a href="https://arxiv.org/abs/2211.15280"> 
+				<b>Abelian varieties over finite fields and their groups of rational points</b>,</a> with Stefano Marseglia. (arXiv preprint.)
+		</li>
+		<br>
+		<li> 
 			<a href="https://arxiv.org/abs/2207.00140"> 
 				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a> (arXiv preprint.)
 		</li>
 		<br>
 		<li> 
-			<a href="https://arxiv.org/abs/2105.08125"> 
-				<b>Every finite abelian group is the group of rational points of an ordinary abelian variety over &#x1D53D<sub>2</sub>, &#x1D53D<sub>3</sub>,  and &#x1D53D<sub>5</sub></b>,</a>  with Stefano Marseglia. (arXiv preprint.)
+			<a href="https://doi.org/10.1090/proc/16127">
+				<b>Every finite abelian group is the group of rational points of an ordinary abelian variety over &#x1D53D<sub>2</sub>, &#x1D53D<sub>3</sub>,  and &#x1D53D<sub>5</sub></b>,</a>  with Stefano Marseglia. Proceedings of the American Mathematical Society, Volume 151, Number 2, February 2023, Pages 501–510.
+				<a href="https://arxiv.org/abs/2105.08125"> (arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
@@ -91,8 +97,8 @@
 		<br>
 		<li> 
 			<a href="https://doi.org/10.1007/s40879-021-00460-1">
-				<b>The Structure of the Group of Rational Points of an Abelian Variety over a Finite Field.</b></a>  European Journal of Mathematics. Published online 23 March 2021.
-				<a href="https://arxiv.org/abs/2006.00637"> (arxiv version) </a>
+				<b>The Structure of the Group of Rational Points of an Abelian Variety over a Finite Field.</b></a>  European Journal of Mathematics, Volume 7, Pages 1124–1136 (2021).
+				<a href="https://arxiv.org/abs/2006.00637"> (arXiv version) </a>
 		</li>
 		<br>
 		<li> 
@@ -102,7 +108,7 @@
 			-->
 
 				 <a href="https://link.springer.com/chapter/10.1007/978-3-030-80914-0_7"><b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
-				Arithmetic Geometry, Number Theory, and Computation, Simons Symposia. <a href="https://arxiv.org/abs/2002.02067"> (arxiv version) </a>
+				Arithmetic Geometry, Number Theory, and Computation, Simons Symposia. <a href="https://arxiv.org/abs/2002.02067"> (arXiv version) </a>
 		</li>
 		<br>
 		<li> 
