--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 <hr>
 	<p>
 		Currently, I am a <a href="https://heilbronn.ac.uk/fellowships/"> Heilbronn Research Fellow </a> at  <a href="https://www.ucl.ac.uk/maths/">University College London</a>.
-		I completed my PhD at <a href="https://science.psu.edu/math"> Pennsylvania State University </a> in 2021, and my advisor was  <a href="http://personal.psu.edu/kxe8/"> Professor Kirsten Eisentr&auml;ger</a>.  I enjoy thinking about a wide variety of topics in arithmetic geometry and algebraic number theory, including abelian varieties over finite fields, and problems of decidability and definability.
+		I completed my PhD at <a href="https://science.psu.edu/math"> Pennsylvania State University </a> in 2021, where my advisor was  <a href="https://pure.psu.edu/en/persons/anne-kirsten-eisentraeger"> Professor Kirsten Eisentr&auml;ger</a>.  I enjoy thinking about a wide variety of topics in arithmetic geometry and algebraic number theory, including abelian varieties over finite fields, and problems of decidability and definability.
 	</p>
 <hr>
 </div>
 </div>
 <div id="page">
 <div id="content">
-	<h2> Papers </h2>		
+	<h2> Preprints </h2>	
 	<ol reversed>
 		<li> 
 			<a href="https://arxiv.org/abs/2211.15280"> 
@@ -75,8 +75,16 @@
 		</li>
 		<br>
 		<li> 
+			<a href="https://arxiv.org/abs/2010.09551"> 
+				<b>A topological approach to undefinability in algebraic extensions of </b> &#x211A,</a>  with  Kirsten Eisentr&auml;ger, Russell Miller and Linda Westrick. (arXiv preprint.)
+		</li>
+	</ol>
+
+	<h2> Publications </h2>		
+	<ol reversed>
+		<li> 
 			<a href="https://arxiv.org/abs/2207.00140"> 
-				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a> (arXiv preprint.)
+				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a> (arXiv preprint.) Accepted for publication in the Bulletin of the London Mathematical Society.
 		</li>
 		<br>
 		<li> 
@@ -86,13 +94,9 @@
 		</li>
 		<br>
 		<li> 
-			<a href="https://arxiv.org/abs/2102.11419"> 
-				<b>Doubly isogenous genus-2 curves with <em>D</em><sub>4</sub>-action</b>,</a>  with Vishal Arul, Jeremy Booher, Steven R. Groen, Everett W. Howe, Wanlin Li, Vlad Matei and Rachel Pries. (arXiv preprint.)
-		</li>
-		<br>
-		<li> 
-			<a href="https://arxiv.org/abs/2010.09551"> 
-				<b>A topological approach to undefinability in algebraic extensions of </b> &#x211A,</a>  with  Kirsten Eisentr&auml;ger, Russell Miller and Linda Westrick. (arXiv preprint.)
+			
+			<a href="https://doi.org/10.1090/mcom/3891">
+				<b>Doubly isogenous genus-2 curves with <em>D</em><sub>4</sub>-action</b>,</a>  with Vishal Arul, Jeremy Booher, Steven R. Groen, Everett W. Howe, Wanlin Li, Vlad Matei and Rachel Pries. Mathematics of Computation. Published electronically: August 31, 2023; to appear in print. <a href="https://arxiv.org/abs/2102.11419">(arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
@@ -102,11 +106,6 @@
 		</li>
 		<br>
 		<li> 
-			<!--<a href="https://arxiv.org/abs/2002.02067"> 
-				<b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
-				The <a href="https://www.springer.com/series/15045">Simons Symposia</a>  volume for the <a href="https://simonscollab.icerm.brown.edu/"> Simons Collaboration on "Arithmetic Geometry, Number Theory, and Computation"</a>.
-			-->
-
 				 <a href="https://link.springer.com/chapter/10.1007/978-3-030-80914-0_7"><b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
 				Arithmetic Geometry, Number Theory, and Computation, Simons Symposia. <a href="https://arxiv.org/abs/2002.02067"> (arXiv version) </a>
 		</li>
@@ -148,24 +147,13 @@
 	<h2> Teaching  Experience </h2><br>
 	<i>University College London: </i>
 	<ul>
+		<li> <a href="https://www.ucl.ac.uk/maths/current-students/current-undergraduates/module-information-undergraduates"> MATH0037 Logic </a>, <i> Mathematics Honours Year 3 </i> - Winter 2023 </li>
 		<li> <a href="https://www.ucl.ac.uk/maths/current-students/current-undergraduates/module-information-undergraduates"> MATH0006 Algebra 2</a>, <i> Mathematics Honours Year 1 </i> - Winter 2022 </li>
 	</ul>
 
 	<i>The Pennsylvania State University: </i>
-	<!-- OLD STYLE<ul>
-		<li> Summer 2021: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 220, Matrices </a> </li>
-		<li> Spring 2021: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>
-		<li> Fall 2020: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>
-		<li> Fall 2017: <a href="https://science.psu.edu/math/mass/content/mass-2017.html"> MASS course on knot theory </a> </li>
-		<li> Fall 2016: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> </li>
-		<li> Summer 2016: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> </li>
-		<li> Spring 2016: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/">  Math 021, College Algebra I </a> </li>
-		<li> Fall 2015: <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 034, Math and Money </a> </li>
-	</ul>-->
 	<ul>
 		<li><a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 220, Matrices </a> -  Summer 2021 </li>
-		<!--<li> Spring 2021: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>
-		<li> Fall 2020: Departmental problem session leader for the <a href="AAQual.html"> Abstract Algebra Qualifying Examination </a> </li>-->
 		<li> <a href="https://science.psu.edu/math/mass/content/mass-2017.html"> Math 497C, Honors MASS Geometry: Knot Theory </a> - Fall 2017 </li>
 		<li> <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> - Fall 2016 </li>
 		<li> <a href="https://bulletins.psu.edu/university-course-descriptions/undergraduate/math/"> Math 026, Plane Trigonometry </a> - Summer 2016 </li>
