--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 		</li>
 		<br>
 		<li> 
-			<a href="https://doi.org/10.1090/proc/16127">
-				<b>Every finite abelian group is the group of rational points of an ordinary abelian variety over &#x1D53D<sub>2</sub>, &#x1D53D<sub>3</sub>,  and &#x1D53D<sub>5</sub></b>,</a>  with Stefano Marseglia. Proceedings of the American Mathematical Society, Volume 151, Number 2, February 2023, Pages 501–510.
-				<a href="https://arxiv.org/abs/2105.08125"> (arXiv version.) </a>
-		</li>
-		<br>
-		<li> 
 			
 			<a href="https://doi.org/10.1090/mcom/3891">
 				<b>Doubly isogenous genus-2 curves with <em>D</em><sub>4</sub>-action</b>,</a>  with Vishal Arul, Jeremy Booher, Steven R. Groen, Everett W. Howe, Wanlin Li, Vlad Matei and Rachel Pries. Mathematics of Computation. Published electronically: August 31, 2023; to appear in print. <a href="https://arxiv.org/abs/2102.11419">(arXiv version.) </a>
+		</li>
+		<br>
+		<li> 
+			<a href="https://doi.org/10.1090/proc/16127">
+				<b>Every finite abelian group is the group of rational points of an ordinary abelian variety over &#x1D53D<sub>2</sub>, &#x1D53D<sub>3</sub>,  and &#x1D53D<sub>5</sub></b>,</a>  with Stefano Marseglia. Proceedings of the American Mathematical Society, Volume 151, Number 2, February 2023, Pages 501–510.
+				<a href="https://arxiv.org/abs/2105.08125"> (arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
@@ -106,7 +106,7 @@
 		</li>
 		<br>
 		<li> 
-				 <a href="https://link.springer.com/chapter/10.1007/978-3-030-80914-0_7"><b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
+				 <a href="https://doi.org/10.1007/978-3-030-80914-0_7"><b>Restrictions on Weil polynomials of Jacobians of hyperelliptic curves</b>,</a> with Edgar Costa, Ravi Donepudi, Ravi Fernando, Valentijn Karemaker, and Mckenzie West. 
 				Arithmetic Geometry, Number Theory, and Computation, Simons Symposia. <a href="https://arxiv.org/abs/2002.02067"> (arXiv version) </a>
 		</li>
 		<br>
