--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 			<a href="https://arxiv.org/abs/2211.15280"> 
 				<b>Abelian varieties over finite fields and their groups of rational points</b>,</a> with Stefano Marseglia. (arXiv preprint.)
 		</li>
-		<br>
-		<li> 
-			<a href="https://arxiv.org/abs/2010.09551"> 
-				<b>A topological approach to undefinability in algebraic extensions of </b> &#x211A,</a>  with  Kirsten Eisentr&auml;ger, Russell Miller and Linda Westrick. (arXiv preprint.)
-		</li>
 	</ol>
 
 	<h2> Publications </h2>		
 	<ol reversed>
+		<li> 
+			<a href="https://arxiv.org/abs/2010.09551"> 
+				<b>A topological approach to undefinability in algebraic extensions of </b> &#x211A,</a>  with  Kirsten Eisentr&auml;ger, Russell Miller and Linda Westrick. (arXiv preprint.) Accepted for publication in the Bulletin of Symbolic Logic.
+		</li>
+		<br>
 		<li> 
 			<a href="https://arxiv.org/abs/2207.00140"> 
 				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a> (arXiv preprint.) Accepted for publication in the Bulletin of the London Mathematical Society.
