doi for Qtri paper

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 		</li>
 		<br>
 		<li> 
-			<a href="https://arxiv.org/abs/2207.00140"> 
-				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a> (arXiv preprint.) Accepted for publication in the Bulletin of the London Mathematical Society.
+			<a href="https://doi.org/10.1112/blms.12933"> 
+				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a>  Bulletin of the London Mathematical Society. Published electronically: 02 October 2023. <a href="https://arxiv.org/abs/2207.00140"> (arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
