--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 	<h2> Publications </h2>		
 	<ol reversed>
 		<li> 
-			<a href="https://arxiv.org/abs/2010.09551"> 
-				<b>A topological approach to undefinability in algebraic extensions of </b> &#x211A,</a>  with  Kirsten Eisentr&auml;ger, Russell Miller and Linda Westrick. (arXiv preprint.) Accepted for publication in the Bulletin of Symbolic Logic.
+			<a href="https://doi.org/10.1017/bsl.2023.37">  
+				<b>A topological approach to undefinability in algebraic extensions of </b> &#x211A,</a>  with  Kirsten Eisentr&auml;ger, Russell Miller and Linda Westrick. Bulletin of Symbolic Logic. Published electronically 29 September 2023.
+				<a href="https://arxiv.org/abs/2010.09551"> (arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
@@ -90,7 +91,7 @@
 		<li> 
 			
 			<a href="https://doi.org/10.1090/mcom/3891">
-				<b>Doubly isogenous genus-2 curves with <em>D</em><sub>4</sub>-action</b>,</a>  with Vishal Arul, Jeremy Booher, Steven R. Groen, Everett W. Howe, Wanlin Li, Vlad Matei and Rachel Pries. Mathematics of Computation. Published electronically: August 31, 2023; to appear in print. <a href="https://arxiv.org/abs/2102.11419">(arXiv version.) </a>
+				<b>Doubly isogenous genus-2 curves with <em>D</em><sub>4</sub>-action</b>,</a>  with Vishal Arul, Jeremy Booher, Steven R. Groen, Everett W. Howe, Wanlin Li, Vlad Matei and Rachel Pries. Mathematics of Computation, Volume 93, 2024, Pages 347-381. <a href="https://arxiv.org/abs/2102.11419">(arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
