--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
 	<h2> Publications </h2>		
 	<ol reversed>
 		<li> 
+			<a href="https://doi.org/10.1112/blms.12933"> 
+				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a>  Bulletin of the London Mathematical Society. Published electronically: 02 October 2023. <a href="https://arxiv.org/abs/2207.00140"> (arXiv version.) </a>
+		</li>
+		<br>
+		<li> 
 			<a href="https://doi.org/10.1017/bsl.2023.37">  
 				<b>A topological approach to undefinability in algebraic extensions of </b> &#x211A,</a>  with  Kirsten Eisentr&auml;ger, Russell Miller and Linda Westrick. Bulletin of Symbolic Logic. Published electronically 29 September 2023.
 				<a href="https://arxiv.org/abs/2010.09551"> (arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
-			<a href="https://doi.org/10.1112/blms.12933"> 
-				<b>Definability and decidability for rings of integers in totally imaginary fields</b>,</a>  Bulletin of the London Mathematical Society. Published electronically: 02 October 2023. <a href="https://arxiv.org/abs/2207.00140"> (arXiv version.) </a>
-		</li>
-		<br>
-		<li> 
 			
 			<a href="https://doi.org/10.1090/mcom/3891">
-				<b>Doubly isogenous genus-2 curves with <em>D</em><sub>4</sub>-action</b>,</a>  with Vishal Arul, Jeremy Booher, Steven R. Groen, Everett W. Howe, Wanlin Li, Vlad Matei and Rachel Pries. Mathematics of Computation, Volume 93, 2024, Pages 347-381. <a href="https://arxiv.org/abs/2102.11419">(arXiv version.) </a>
+				<b>Doubly isogenous genus-2 curves with <em>D</em><sub>4</sub>-action</b>,</a>  with Vishal Arul, Jeremy Booher, Steven R. Groen, Everett W. Howe, Wanlin Li, Vlad Matei and Rachel Pries. Mathematics of Computation, Volume 93, 2024, Pages 347-381. Published electronically: August 31, 2023. <a href="https://arxiv.org/abs/2102.11419">(arXiv version.) </a>
 		</li>
 		<br>
 		<li> 
